# cancellation-token-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: canceled.rs  run.rs  with.rs
src/: lib.rs  tests.rs
src/tests/: cancel_callback.rs
tests/: tests.rs
