[package]
name = "cancellation-token"
version = "0.1.0"
edition = "2021"
authors = ["frozenlib"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/cancellation-token-rs"
documentation = "https://docs.rs/cancellation-token/"
keywords = ["cancel", "graceful", "shutdown", "signal"]
categories = ["asynchronous"]
description = "A Rust implementation of C#'s CancellationToken API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slabmap = "0.2.0"

[dev-dependencies]
rt-local = "0.1.4"
anyhow = "1.0.79"
